fixed text alignment for contact message on small screens

--- a/portfolio/src/components/contact/Contact.scss
+++ b/portfolio/src/components/contact/Contact.scss
@@ -85,5 +85,14 @@
 
   .contact-response {
     transition: 2s;
+    padding-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .contact {
+    .contact-response {
+      text-align: center;
+    }
   }
 }
